--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "offline": "serverless offline start",
+    "deploy": "sls deploy"
   },
   "author": "Tom Woodard <woodard.thomas@gmail.com>",
   "license": "ISC"
