--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "UI for homes project",
   "main": "handler.js",
   "dependencies": {
+    "address-validator": "^0.2.3",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "hbs": "^4.1.0",
     "serverless-http": "^2.3.2",
     "serverless-offline": "^5.12.1"
