--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-validator": "^6.4.0",
-    "serverless": "^1.65.0",
+    "serverless": "^1.79.0",
     "serverless-http": "^2.3.2",
     "serverless-offline": "^5.12.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "offline": "serverless offline start",
-    "deploy": "sls deploy"
+    "testit": "echo \"Error: no test specified\" && exit 1",
+    "runit": "serverless offline start",
+    "deployit": "sls deploy"
   },
   "author": "Tom Woodard <woodard.thomas@gmail.com>",
   "license": "ISC"
