--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: homeUI
+service: rental
 provider:
   name: aws
   runtime: nodejs12.x
@@ -9,9 +9,10 @@ provider:
 
 functions:
   app:
-    handler: handler.homeUI
+    handler: handler.rental
     events:
         - http: ANY /
         - http: 'ANY {proxy+}'
+
 plugins:
   - serverless-offline
