--- a/serverless.yml
+++ b/serverless.yml
@@ -14,5 +14,30 @@ functions:
         - http: ANY /
         - http: 'ANY {proxy+}'
 
+
+resources:
+  Resources:
+    CognitoUserPool:
+      Type: "AWS::Cognito::UserPool"
+      Properties:
+        MfaConfiguration: OFF
+        UserPoolName: rentalUsers
+        UsernameAttributes:
+          - email
+        Policies:
+          PasswordPolicy:
+            MinimumLength: 6
+            RequireLowercase: False
+            RequireNumbers: True
+            RequireSymbols: False
+            RequireUppercase: True
+    CognitoUserPoolClient:
+      Type: "AWS::Cognito::UserPoolClient"
+      Properties:
+        ClientName: rental
+        GenerateSecret: False
+        UserPoolId:
+          Ref: CognitoUserPool
+
 plugins:
   - serverless-offline
