--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Workflow application for managing rental properties",
   "main": "handler.js",
   "dependencies": {
+    "amazon-cognito-identity-js": "^4.4.0",
+    "aws-sdk": "^2.750.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-validator": "^6.4.0",
-    "serverless": "^1.80.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.4",
+    "node-fetch": "^2.6.1",
+    "serverless": "^1.83.0",
     "serverless-http": "^2.3.2"
   },
   "devDependencies": {
@@ -15,7 +20,7 @@
   },
   "scripts": {
     "testit": "echo \"Error: no test specified\" && exit 1",
-    "runit": "serverless offline start"
+    "runit": "sls offline"
   },
   "author": "Tom Woodard <woodard.thomas@gmail.com>",
   "license": "ISC",
