--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "serverless-http": "^2.6.0"
   },
   "devDependencies": {
-    "serverless-offline": "^5.12.1",
+    "serverless-offline": "^6.8.0",
     "serverless-s3-deploy": "^0.9.0"
   },
   "scripts": {
     "testit": "echo \"Error: no test specified\" && exit 1",
-    "offline": "sls offline"
+    "offline": "sls offline",
     "deploy": "sls deploy"
   },
   "author": "Tom Woodard <woodard.thomas@gmail.com>",
